# optimal_cuttings-program

./: .gitignore  README.md  main.py  pyproject.toml  windows.py
GUI/Components/: ui_main.py  ui_result.py  ui_settings.py
GUI/UI/: ui_main.ui  ui_result.ui  ui_settings.ui
utils/: algorithm.py  pdf_generator.py
