[tool.poetry]
name = "newguimetal"
version = "0.1.0"
description = ""
authors = ["frankdelan <frank.danil704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
reportlab = "^4.0.9"
pyside6 = "^6.6.1"
pyinstaller = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
